--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,42 @@ body {
 .logo {
     vertical-align: middle;
 }
+
+.riquadro-centrale {
+    width: 100%;
+    height: 800px;
+    background-color: aliceblue;
+    margin: auto;
+    border-radius: 20px;
+    margin-top: 50px;
+
+}
+
+.barra-iniziale {
+    height: 70px;
+    border-bottom: solid 2px rgba(0, 0, 0, 0.27);
+    line-height: 70px;
+
+}
+
+.add-T {
+    background-color: #46acf1;
+    padding: 10px;
+    display: inline;
+    vertical-align: middle;
+    border-radius: 5px;
+    color: aliceblue;
+    margin: 0 10px 0 60px;
+}
+
+
+
+.add-S {
+    background-color: aliceblue;
+    padding: 10px;
+    display: inline;
+    vertical-align: middle;
+    border-radius: 5px;
+    color: rgb(182, 186, 190);
+    border: solid 1px rgb(153, 153, 153);
+}
