--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,41 @@ body {
     color: rgb(182, 186, 190);
     border: solid 1px rgb(153, 153, 153);
 }
+
+.liste {
+    margin-left: 60px;
+}
+
+.liste h2 {
+    margin-top: 50px;
+    margin-bottom: 10px;
+}
+
+ul {
+    list-style: none;
+}
+
+.spunta-verde {
+    font-size: 15px;
+    border: solid 1px #5fbda5;
+    padding: 5px;
+    border-radius: 50%;
+    color: #5fbda5;
+    display: inline-block;
+}
+
+.prima-lista p {
+    display: inline-block;
+    font-size: 25px;
+}
+
+
+.add-E {
+    background-color: #46acf1;
+    padding: 5px 10px;
+    display: inline;
+    vertical-align: middle;
+    border-radius: 10px;
+    color: aliceblue;
+    margin: 0 10px 0 10px;
+}
